--- a/images/post.html
+++ b/images/post.html
@@ -10,7 +10,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="default.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 
 
 	<style type="text/css">
@@ -29,7 +29,7 @@
 	<div class="nav-wrapper">
 
 		<!-- Link around dots-wrapper added after tutorial video -->
-		<a href="index.html">
+		<a href="../index.html">
 			<div class="dots-wrapper">
 				<div id="dot-1" class="browser-dot"></div>
 				<div id="dot-2" class="browser-dot"></div>
@@ -38,7 +38,7 @@
 		</a>
 
 		<ul id="navigation">
-			<li><a href="index.html#contact">Contact</a></li>
+			<li><a href="../index.html#contact">Contact</a></li>
 
 		</ul>
 	</div>
@@ -47,7 +47,7 @@
 		<br>
 
 		<div class="img-container">
-			<img src="images/dash.jpg">
+			<img src="../images/dash.jpg">
 		</div>
 		
 		<h3>Laboratory Management System</h3>
@@ -81,27 +81,27 @@
 
 		<h5>Laboratory Admin Dashboard</h5>
 		<div class="img-container">
-			<img src="images/lab-dash.jpg">
+			<img src="../images/lab-dash.jpg">
 		</div>
 
 		<h6>Sample ID Form</h5>
 		<div class="img-container">
-			<img src="images/sample-form.jpg">
+			<img src="../images/sample-form.jpg">
 		</div>
 
 		<h5>Results Input Fields</h5>
 		<div class="img-container">
-			<img src="images/results.jpg">
+			<img src="../images/results.jpg">
 		</div>
 
 		<h5>PDF Report (Automaticly Generated)</h5>
 		<div class="img-container">
-			<img src="images/pdf-report.jpg">
+			<img src="../images/pdf-report.jpg">
 		</div>
 
 		<h5>Customer Dashboard</h5>
 		<div class="img-container">
-			<img src="images/customer-dash.jpg">
+			<img src="../images/customer-dash.jpg">
 		</div>
 
 	</div>
