--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div id="corner-tl" class="corner"></div>
 							<div id="corner-tr" class="corner"></div>
 							<h3>What I Do</h3>
-							<p>I am working as a data scientist / DeepLearner / Machine Learner @MachineOrigin, now I'm open for an opportunities.</p>
+							<p>I am working as a data scientist / DeepLearner / Machine Learner @MachineOrigin, now I'm open for opportunities.</p>
 							<div id="corner-br" class="corner"></div>
 							<div id="corner-bl" class="corner"></div>
 						</div>
