--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div id="corner-tl" class="corner"></div>
 							<div id="corner-tr" class="corner"></div>
 							<h3>What I Do</h3>
-							<p>I am working as a data scientist / DeepLearner / Machine Learner @MachineOrigin, now I'm open for opportunities.</p>
+							<p>I am working as a data scientist / DeepLearner / Machine Learner @ValueLabs, now I'm open for opportunities.</p>
 							<div id="corner-br" class="corner"></div>
 							<div id="corner-bl" class="corner"></div>
 						</div>
@@ -109,6 +109,7 @@
 							<li>Docker</li><br>
 							<li>Sagemaker</li><br>
 							<li>AWS (EC2/S3)</li><br>
+							<li>Azure ML)</li><br>
 							<li>Heroku</li><br>
 							<li>SQL</li><br>
 						</ul>
@@ -122,7 +123,8 @@
 					<img id="social_img" src="images/linkedin_bio.png">
 					<h3>Find me on Twitter & LinkedIn</h3>
 
-					<a target="_blank" href="https://www.linkedin.com/in/juzz4vijay/">LinkedIn: @juzz4vijay</a>
+					<a target="_blank" href="https://www.linkedin.com/in/vijayrameshkumar/">LinkedIn: @juzz4vijay</a>
+					<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 					<br>
 					<a target="_blank" href="https://mobile.twitter.com/juzzcallvijay">Twitter: @juzzcallvijay</a>
 				</div>
