--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 							<li>API : Django-REST, Flask</li><br>
 							<li>Data Analyitics : Numpy, Pandas, SKlearn</li>><br>
 							<li>Data Visualization : Matplotlib, Seaborn</li><br>
+							<li>GCP : Vertex AI)</li><br>
 						</ul>
 
 						<ul>
@@ -108,10 +109,10 @@
 							<li>HTML/CSS, React</li><br>
 							<li>Docker</li><br>
 							<li>Sagemaker</li><br>
-							<li>AWS (EC2/S3)</li><br>
-							<li>Azure ML)</li><br>
+							<li>AWS (EC2,S3,Sagemaker)</li><br>
+							<li>Azure : AzureML, DataBricks)</li><br>
 							<li>Heroku</li><br>
-							<li>SQL</li><br>
+							<li>Databases : SQL, MySQL, No-SQL</li><br>
 						</ul>
 
 					</div>
