--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/index.png">
+					<img id="profile_pic" src="images/index.jpg">
 
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
