--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<li>Tensorflow, Keras</li><br>
 							<li>DL : Computer Vision</li><br>
 							<li>DL : Natural Language Processing</li><br>
-							<li>API : Django-REST, Flask</li><br>
+							<li>API : Django-REST, Flask, Fast API</li><br>
 							<li>Data Analyitics : Numpy, Pandas, SKlearn</li>><br>
 							<li>Data Visualization : Matplotlib, Seaborn</li><br>
 							<li>GCP : Vertex AI)</li><br>
@@ -109,7 +109,7 @@
 							<li>HTML/CSS, React</li><br>
 							<li>Docker</li><br>
 							<li>Sagemaker</li><br>
-							<li>AWS (EC2,S3,Sagemaker)</li><br>
+							<li>AWS (EC2,S3,Sagemaker, ECS, Personalize)</li><br>
 							<li>Azure : AzureML, DataBricks)</li><br>
 							<li>Heroku</li><br>
 							<li>Databases : SQL, MySQL, No-SQL</li><br>
