--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<li>API : Django-REST, Flask, Fast API</li><br>
 							<li>Data Analyitics : Numpy, Pandas, SKlearn</li>><br>
 							<li>Data Visualization : Matplotlib, Seaborn</li><br>
-							<li>GCP : Vertex AI)</li><br>
+							<li>GCP : Vertex AI</li><br>
 						</ul>
 
 						<ul>
@@ -110,7 +110,7 @@
 							<li>Docker</li><br>
 							<li>Sagemaker</li><br>
 							<li>AWS (EC2,S3,Sagemaker, ECS, Personalize)</li><br>
-							<li>Azure : AzureML, DataBricks)</li><br>
+							<li>Azure : (AzureML, DataBricks)</li><br>
 							<li>Heroku</li><br>
 							<li>Databases : SQL, MySQL, No-SQL</li><br>
 						</ul>
