--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 					<br>
 					<a target="_blank" href="https://mobile.twitter.com/juzzcallvijay">Twitter: @juzzcallvijay</a>
 					<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+					<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="vijayrameshkumar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/vijayrameshkumar?trk=profile-badge">Vijay Rameshkumar</a></div>
+              
 				</div>
 			</div>
 
