--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 					<img id="social_img" src="images/linkedin_bio.png">
 					<h3>Find me on Twitter & LinkedIn</h3>
 					
-					<a target="_blank" href="https://mobile.twitter.com/juzzcallvijay">Twitter: @juzzcallvijay</a>					
+					<a target="_blank" href="https://mobile.twitter.com/juzzcallvijay">Twitter: @juzzcallvijay</a>	
+					<a href="https://twitter.com/juzzcallvijay?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @juzzcallvijay</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 					<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="vijayrameshkumar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/vijayrameshkumar?trk=profile-badge">LinkedIn :Vijay Rameshkumar</a></div>
               
